tests/lifetime/inter_decl/variance.err.expected
error: at 18:5: [LT-LifetimeMismatch] In function 'shorten_shared': lifetime mismatch: expected value with region 'b, found value with region 'a
    |
 17 |   entry:
 18 |     dst.* = copy x;
    |     ^^^^^^^^^^^^^^
 19 |     return
    |
error: at 26:5: [LT-LifetimeMismatch] In function 'narrow_mut': lifetime mismatch: expected value with region 'b, found value with region 'a
    |
 25 |   entry:
 26 |     dst.* = move src;
    |     ^^^^^^^^^^^^^^^^
 27 |     return
    |
error: at 26:5: [LT-LifetimeMismatch] In function 'narrow_mut': lifetime mismatch: expected value with region 'a, found value with region 'b
    |
 25 |   entry:
 26 |     dst.* = move src;
    |     ^^^^^^^^^^^^^^^^
 27 |     return
    |
