tests/lifetime/inter_decl/variance.sim
# Variance of ref kinds — shared refs are covariant, exclusive-write
# refs (&mut/&out/&drop/&uninit) are invariant.
#
# Observable difference: assigning `src: &kind 'a` into `dst: &kind 'b`
# emits `'a outlives 'b`. For invariant kinds, we additionally emit
# `'b outlives 'a` (equality). Without `where 'a: 'b` clauses in
# scope, neither direction is satisfiable for distinct Named regions,
# so a distinct-lifetime assignment still fires LT-LifetimeMismatch.
#
# BUT: for invariant kinds it fires TWO diagnostics (one per
# direction); for shared it fires ONE. That difference is the
# variance signal, pinned by this fixture.

# ---------- shared: one direction constraint → one mismatch ----------

fn<'a, 'b> shorten_shared(x: &'a i64, dst: &out &'b i64) {
  entry:
    dst.* = copy x;
    return
}

# ---------- &mut: invariant → two mismatches ----------

fn<'a, 'b> narrow_mut(src: &mut 'a i64, dst: &out &mut 'b i64) {
  entry:
    dst.* = move src;
    return
}

# ---------- transitive closure: signature axioms chain ----------

# `identity` uses elision — every input outlives the elided output.
# When called through this wrapper (not yet — needs call-site
# propagation), the closure would chain input regions through.
# For now: same-region assignment through elision axioms lands.
# Direct assignment `dst.* = copy x` with matching 'a passes.
fn<'a> tautology(x: &'a i64, dst: &out &'a i64) {
  entry:
    dst.* = copy x;
    return
}
